--- a/CTO/CityTourismOnline.html
+++ b/CTO/CityTourismOnline.html
@@ -14,7 +14,7 @@
             <b>Welcome to CityTourismOnline</b>
         </p>
         <form name="search" method="post" action="">
-            <input type="text" name="cityToSearch" placeholder="请输入城市名称">
+            <input type="text" name="cityToSearch" placeholder="请输入城市中文名称">
             <input type="button"  value="搜索" id='btnSearch'>
         </form> 
     </div>
@@ -27,10 +27,13 @@
     <div class="tourismList">
         <tourism></tourism>
     </div>
+    <div class="airCondition">
+        <air></air>
+    </div>
     <div id="container"></div>
 </body>
 </html>
 <script type="text/javascript" src="./js/search.js"></script>
 
 <!--    Made by 1853444 崔鑫宇  
-Date；10/22/2020  -->
+Date；10/23/2020  -->
